deploy/argocd/apps/istio/resources/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  # HTTP (redirect to HTTPS)
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.gigix"
    tls:
      httpsRedirect: true

  # HTTPS (wildcard certificate)
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*.gigix"
    tls:
      mode: SIMPLE
      credentialName: wildcard-gigix-tls
